# alco

./: .rustfmt.toml  Cargo.toml  README.md  install.sh
src/: alacritty.rs  bat.rs  cmus.rs  delta.rs  kitty.rs  lib.rs  main.rs  nvim.rs  starship.rs  tmux.rs
