[package]
name = "alco"
version = "0.2.0"
authors = ["Saecki <tobiasschmitz2001@gmail.com>"]
edition = "2021"

[features]
default = ["alacritty", "kitty", "tmux", "neovim", "starship", "bat", "delta", "cmus"]
alacritty = []
kitty = ["unix-cred"]
tmux = []
neovim = ["nvim-rs"]
starship = []
bat = []
delta = []
cmus = []

[dependencies]
anyhow = "1.0"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5.8", default-features = true, features = ["cargo"] }
clap_complete = "4.5.7"
humantime = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
shellexpand = "3.1.0"
yaml-rust = "0.4.5"

nvim-rs = { version = "0.7.0", features = ["use_tokio"], optional = true }
unix-cred = { version = "0.1.1", optional = true }
